mep-gateway/templates/service-external-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: oai-mep-gateway-external
spec:
  type: LoadBalancer
  ports:
    - name: kong-proxy
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: kong-admin
      port: 8001
      targetPort: 8001
      protocol: TCP
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    io.kompose.service: oai-mep-gateway
